[B] Fix content height being cut off when press logo present
Fixes #1437

--- a/client/src/theme/Components/global/_header-app.scss
+++ b/client/src/theme/Components/global/_header-app.scss
@@ -335,5 +335,9 @@
 
   @include respond($break75) {
     padding-top: 80px;
+
+    &.extra-top {
+      padding-top: 105px;
+    }
   }
 }
